k8s/base/loadbalancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadbalancer-deployment
  labels:
    app.kubernetes.io/name: loadbalancer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: loadbalancer-deployment
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loadbalancer-deployment
    spec:                 
      containers:
        - name: hello-world
          image: helloworld-webserver:1.0
          imagePullPolicy: IfNotPresent
          command:
          - bash
          - -c
          - |
            [...]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
