k8s/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: helloworld-statefulset
  labels:
    app.kubernetes.io/name: helloworld
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: helloworld-statefulset
  replicas: 2
  serviceName: helloworld-allpods-svc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helloworld-statefulset
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In 
                values:
                - helloworld
      containers:
        - name: hello-world
          image: helloworld-webserver:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 75m
              memory: 64Mi
