k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  selector:
    app.kubernetes.io/name: helloworld-statefulset
    role: active

  # Use of clusterIP: None important, as this creates a "headless" service
  # where the IP addresses for all of the pods matched by the selector are 
  # included in the DNS resolution of the service
  clusterIP: None

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-allpods-svc
spec:
  selector:
    app.kubernetes.io/name: helloworld-statefulset
    app.kubernetes.io/instance: main
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
